the button name have changed ..

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <textarea placeholder="Write your text here..."></textarea>
         <div class="row">
             <select></select>
-            <button> Listen</button>
+            <button>Click to Listen</button>
         </div>
     </div>
     <script src="script.js"></script>
